--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>RaulCE22</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
-</head>
-<body>
-    Me
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>me</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Material+Icons"><link href=/css/academy.dcc43a82.css rel=prefetch><link href=/css/contact.89fc9770.css rel=prefetch><link href=/css/projects.3addfae7.css rel=prefetch><link href=/js/academy.16ccee5f.js rel=prefetch><link href=/js/contact.cf6a56fc.js rel=prefetch><link href=/js/projects.bc9a08a2.js rel=prefetch><link href=/css/chunk-vendors.ac7e48c1.css rel=preload as=style><link href=/js/app.76398f17.js rel=preload as=script><link href=/js/chunk-vendors.06f37f4b.js rel=preload as=script><link href=/css/chunk-vendors.ac7e48c1.css rel=stylesheet></head><body><noscript><strong>We're sorry but me doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.06f37f4b.js></script><script src=/js/app.76398f17.js></script></body></html>
